# pneumonia-detection

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: main.ipynb
pneumonia_detection/: config.py  dataset.py  main.py  visualize_dataset.py
pneumonia_detection/CNN/: model.py  trainer.py
pneumonia_detection/modeling/: model.py  train.py
