[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pneumonia-detection"
version = "0.0.1"
description = "Pneumonia Detection From Chest X -Ray"
authors = [
  { name = "Rafid" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["pneumonia-detection"]
include = ["pyproject.toml", "pneumonia-detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pneumonia-detection"]
force-sort-within-sections = true

